--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
 <link href="./style.css" rel="stylesheet">
 
 
-<nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
+<nav class="navbar navbar-expand-sm navbar-dark" style=" color: #73689f;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
+      <h2 class="nav-title">PS70 Spring 2025</h2>
     </div>
     <div class="navbar-nav">
       <h4><a class="nav-link" href="./index.html">Home</a></h4>
@@ -24,7 +24,7 @@
 
 
 
-<h3>About Me</h3>
+<h1>About Me</h1>
 
 <p class="margin">   </p>
 <div class="center-row">
