--- a/index.html
+++ b/index.html
@@ -26,43 +26,43 @@
   
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./01_intro/week1-placeholder-image.jpg" alt = "week 1 placeholder"> </image>
+      <image style = "width: 75%"src = "01_intro/1.png" alt = "week 1"> </image>
       <br>[Week 1: Intro](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./02_2Ddesign/week2-placeholder-image.jpg" alt = "week 2 placeholder"> </image>
+      <image style = "width: 75%"src = "01_intro/2.png" alt = "week 2"> </image>
       <br>[Week 2: 2D Design](./02_2Ddesign/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./03_fabrication/week3-placeholder-image.jpg" alt = "week 3 placeholder"> </image>
+      <image style = "width: 75%"src = "01_intro/3.png" alt = "week 3"> </image>
       <br>[Week 3: Fabrication](./03_fabrication/index.html)
     </div>
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./04_microcontroller/week4-placeholder-image.jpg" alt = "week 4 placeholder"> </image> 
+      <image style = "width: 75%"src = "01_intro/4.png" alt = "week 4"> </image> 
       <br>[Week 4: Programming](./04_microcontroller/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./05_3Ddesign/week5-placeholder-image.jpg" alt = "week 5 placeholder"> </image>
+      <image style = "width: 75%"src = "01_intro/5.png" alt = "week 5"> </image>
       <br>[Week 5: 3D Design](./05_3Ddesign/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./06_inputs/week6-placeholder-image.jpg" alt = "week 6 placeholder"> </image>
+      <image style = "width: 75%"src = "01_intro/6.png" alt = "week 6"> </image>
       <br>[Week 6: Inputs](./06_inputs/index.html)
     </div>
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./07_outputs/week7-placeholder-image.jpg" alt = "week 7 placeholder"> </image>
+      <image style = "width: 75%"src = "01_intro/ezgif-70c5d8e7c9cc8.jpg" alt = "week 7"> </image>
       <br>[Week 7: Outputs](./07_outputs/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./08_cnc/week8-placeholder-image.jpg" alt = "week 8 placeholder"> </image>
+      <image style = "width: 75%"src = "01_intro/8.png" alt = "week 8"> </image>
       <br>[Week 8: CNC](./08_cnc/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./09_networking/week9-placeholder-image.jpg" alt = "week 9 placeholder"> </image>
+      <image style = "width: 75%"src = "01_intro/9.png" alt = "week 9"> </image>
       <br>[Week 9: Networking](./09_networking/index.html)
     </div>
   </div>
