--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
+      <h2 class="nav-title">PS70 Spring 2025</h2>
     </div>
     <div class="navbar-nav">
       <h4><a class="nav-link" href="../index.html">Home</a></h4>
@@ -26,28 +26,41 @@
 <h3>Week 1: Final Project Proposal</h3>
 
 <p class = "margin"></p>
-Here are at most 3 ideas for my final project
+Here are some ideas for my final project. I looked through lots of old projects and thought about what could be both manageable and interesting.
 <p class = "margin"></p>
 
-<h4>Idea 1 : [INSERT IDEA 1]</h4>
+<h4>Idea 1 : Subwoofer with bass control</h4>
 <p class = "margin"></p>
 
-Idea 1 description
+I like electronic music but have sometimes found the bass on speakers that are commercially sold to be subpar. As such,
+I could build my own subwoofer that controls the bass level. On the base level, the project would include some cutting and
+designing of the enclosure (a box of sorts), but it could also have touch sensors or microphone sensors for increased
+user interaction. I am a bit struggling to understand how microcontroller programming fits into this project, but that might
+be because I don't actually know what microcontroller programming consists of! The idea at its core is just to create a
+subwoofer that the user can turn up or turn down bass level as they desire. An example of a box that could serve as the enclosure is below.
+
+<p class = "margin"></p>
+<img src = box.jpg alt = "subwoofer box" width="400" height="300">
+
+<h4>Idea 2: Motion-sensing alarm clock</h4>
+<p class = "margin"></p>
+
+As a serial snoozer of my alarm clock (which happens to be my phone), I am frustrated by the amount of effort necessary
+to actually snooze. I have to fumble around for where my phone actually is, press snooze, and repeat the process when I want
+to snooze again. Instead, the idea would be to create an alarm clock that responds to motions such as waving or other
+disturbances. This way, when I get close to the area of the alarm clock, I can simply turn it off without exactly 
+knowing its location or physically touching it. 
 
 <p class = "margin"></p>
 
-
-<h4>Idea 2: [INSERT IDEA 2]</h4>
+<h4>Idea 3: Smart lamp</h4>
 <p class = "margin"></p>
 
-Idea 2 Description
-
-<p class = "margin"></p>
-
-<h4>Idea 3: [INSERT IDEA 3]</h4>
-<p class = "margin"></p>
-
-Idea 3 Description
+On our phones, we have functions that dynamically adjust brightness based on surroundings and time of day. But other light
+sources, such as lamps in our room, do not have automatic functions and instead need to be adjusted manually or turned off.
+But why not have a lamp that becomes brighter in dimmer areas and shines less in brighter areas, thus saving electricity
+and manual work? The project would involve the creation of the physical structure of the lamp but also could use light
+sensors and such. How fancy the project could go (what type of light, user interaction features, etc.) may depend more on time.
 
 
 
