--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
 
-<nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #dcdcdc; color: #EEE7E8;">
-  <div style="align-items: center; justify-content: center;" class="container-fluid">
-    <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
+  <nav class="navbar navbar-expand-sm navbar-dark">
+    <div class="container-fluid nav-container">
+      <h2 class="nav-title">PS70 Spring 2025</h2>
+      <div class="navbar-nav">
+        <h4><a class="nav-link" href="./index.html"><i class="fas fa-home"></i> Home</a></h4>
+        <h4><a class="nav-link" href="./about.html"><i class="fas fa-info-circle"></i> About</a></h4>
+        <h4><a class="nav-link" href="./13_finalproject/index.html"><i class="fas fa-cogs"></i> Final Project</a></h4>
+      </div>
     </div>
-    <div class="navbar-nav">
-      <h4><a class="nav-link" href="./index.html">Home</a></h4>
-      <h4><a class="nav-link" href="./about.html">About</a></h4>
-      <h4><a class="nav-link" href="./13_finalproject/index.html">Final Project</a></h4>
-    </div>
-  </div>
 </nav>
-
+  
 <body>
 
 <xmp style="display:none;">
