--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -26,7 +26,8 @@
 <h3>Week 1: Final Project Proposal</h3>
 
 <p class = "margin"></p>
-Here are some ideas for my final project. I looked through lots of old projects and thought about what could be both manageable and interesting.
+Here are some ideas for my final project. I looked through lots of old projects and thought about what
+could be both manageable and interesting.
 <p class = "margin"></p>
 
 <h4>Idea 1 : Subwoofer with bass control</h4>
@@ -37,7 +38,8 @@ I could build my own subwoofer that controls the bass level. On the base level, 
 designing of the enclosure (a box of sorts), but it could also have touch sensors or microphone sensors for increased
 user interaction. I am a bit struggling to understand how microcontroller programming fits into this project, but that might
 be because I don't actually know what microcontroller programming consists of! The idea at its core is just to create a
-subwoofer that the user can turn up or turn down bass level as they desire. An example of a box that could serve as the enclosure is below.
+subwoofer that the user can turn up or turn down bass level as they desire. 
+An example of a box that could serve as the enclosure is below.
 
 <p class = "margin"></p>
 <img src = box.jpg alt = "subwoofer box" width="400" height="300">
@@ -61,8 +63,9 @@ sources, such as lamps in our room, do not have automatic functions and instead 
 But why not have a lamp that becomes brighter in dimmer areas and shines less in brighter areas, thus saving electricity
 and manual work? The project would involve the creation of the physical structure of the lamp but also could use light
 sensors and such. How fancy the project could go (what type of light, user interaction features, etc.) may depend more on time.
+Below is a gif that I found online of a possibility, though much would have to be amended.
 
-
+<img src = lamp.gif alt = "lamp gif" width ="400" height ="300">
 
 </div>
 </xmp>
