--- a/01_intro/about.html
+++ b/01_intro/about.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+
 <title>PS70: Intro to Digital Fabrication </title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="./style.css" rel="stylesheet">
@@ -30,22 +34,29 @@
 <div class="center-row">
   <img src="01_intro/1727981469660.jpeg" alt="about me image">
   <p id="aboutme">
-    This is an about me! Here you can talking about the dorm you live in, what year you are, and what are you interested in.
+  Hey everyone! My name is Rishi Mohan, and I am a senior in Mather House concentrating in Applied Math
+  (with a focus in economics). I am originally from Dallas, TX, and am taking this class because building things
+  and making tangible creations seems super interesting/fulfilling but is something I have absolutely no experience with. 
+  From cutting things to robotics to whatever else we cover in this class, I am eager to absorb all the new knowledge 
+  in the class and get to know all of you better.
+
+  Outside of class, I am involved with the water polo team, the undergraduate law review, a PBHA program, and other clubs
+  for fun. Other things I am a fan of are memes, detective shows, EDM, pro sports (NBA, F1, and soccer specifically), and 
+  keeping up with current events.
   </p>
 </div>
 <br></br>
 
-Hello there is more text here, feel free to go into more detail about stuff you are interested in as well. As well as place more
-images if you are interested in those things
+I couldn't find photos of me doing anything science-y/tech-y, so here's my LinkedIn profile photo instead (always on the grind)
 <br></br>
-<img src="./generic-placeholder-image.jpg" alt="generic placeholder image">
+<img src="1727981469660.jpeg" alt="generic placeholder image" width="400" length="600" >
 
 <br></br>
-Maybe even add a video?
+To make up for that boring photo above (and to prove I'm not a bot), here's some wise words from Bubb Rubb.
 <br></br>
 
 <video width="640" height="480" controls>
-  <source src="temp-video.mp4" type="video/mp4">
+  <source src="woo.mp4" type="video/mp4">
 </video>
 
 
