--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
 <title>PS70: Intro to Digital Fabrication </title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
@@ -10,7 +12,7 @@
       <h2 class="nav-title">PS70 Spring 2025</h2>
       <div class="navbar-nav">
         <h4><a class="nav-link" href="./index.html"><i class="fas fa-home"></i> Home</a></h4>
-        <h4><a class="nav-link" href="./about.html"><i class="fas fa-info-circle"></i> About</a></h4>
+        <h4><a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a></h4>
         <h4><a class="nav-link" href="./13_finalproject/index.html"><i class="fas fa-cogs"></i> Final Project</a></h4>
       </div>
     </div>
