--- a/01_intro/about.html
+++ b/01_intro/about.html
@@ -49,7 +49,7 @@
 
 I couldn't find photos of me doing anything science-y/tech-y, so here's my LinkedIn profile photo instead (always on the grind)
 <br></br>
-<img src="1727981469660.jpeg" alt="generic placeholder image" width="400" length="600" >
+<img src="1727981469660.jpeg" alt="image of me" width="400" length="600" >
 
 <br></br>
 To make up for that boring photo above (and to prove I'm not a bot), here's some wise words from Bubb Rubb.
