--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h2 class="nav-title">PS70 Spring 2025</h2>
       <div class="navbar-nav">
         <h4><a class="nav-link" href="./index.html"><i class="fas fa-home"></i> Home</a></h4>
-        <h4><a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a></h4>
+        <h4><a class="nav-link" href="./01_intro/about.html"><i class="fas fa-info-circle"></i> About</a></h4>
         <h4><a class="nav-link" href="./13_finalproject/index.html"><i class="fas fa-cogs"></i> Final Project</a></h4>
       </div>
     </div>
