--- a/01_intro/about.html
+++ b/01_intro/about.html
@@ -7,7 +7,7 @@
 
 <title>PS70: Intro to Digital Fabrication </title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="./style.css" rel="stylesheet">
+<link href="../style.css" rel="stylesheet">
 
 
 <nav class="navbar navbar-expand-sm navbar-dark" style=" color: #73689f;">
@@ -16,7 +16,7 @@
       <h2 class="nav-title">PS70 Spring 2025</h2>
     </div>
     <div class="navbar-nav">
-      <h4><a class="nav-link" href="./index.html">Home</a></h4>
+      <h4><a class="nav-link" href="../index.html">Home</a></h4>
       <h4><a class="nav-link" href="./about.html">About</a></h4>
     </div>
   </div>
@@ -32,7 +32,7 @@
 
 <p class="margin">   </p>
 <div class="center-row">
-  <img src="01_intro/1727981469660.jpeg" alt="about me image">
+  <img src="emoji.jpg" alt="happy image" width="300" length="400">
   <p id="aboutme">
   Hey everyone! My name is Rishi Mohan, and I am a senior in Mather House concentrating in Applied Math
   (with a focus in economics). I am originally from Dallas, TX, and am taking this class because building things
@@ -47,12 +47,13 @@
 </div>
 <br></br>
 
-I couldn't find photos of me doing anything science-y/tech-y, so here's my LinkedIn profile photo instead (always on the grind)
+I couldn't find photos of me doing anything science-y/tech-y/build-y, so here's my LinkedIn profile photo 
+instead (always on the grind)!
+<img src="1727981469660.jpeg" alt="image of me" width="300" length="400">
 <br></br>
-<img src="1727981469660.jpeg" alt="image of me" width="400" length="600" >
 
 <br></br>
-To make up for that boring photo above (and to prove I'm not a bot), here's some wise words from Bubb Rubb.
+To make up for that boring photo above (and to prove I'm not a bot), here are some wise words from Bubb Rubb.
 <br></br>
 
 <video width="640" height="480" controls>
@@ -64,7 +65,7 @@ To make up for that boring photo above (and to prove I'm not a bot), here's some
 </xmp>
 </body>
 
-<script src="./strapdown.js"></script>
+<script src="../strapdown.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
 
 </html>
