--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
+      <h2 class="nav-title">PS70 Spring 2025</h2>
     </div>
     <div class="navbar-nav">
       <h4><a class="nav-link" href="../index.html">Home</a></h4>
@@ -37,6 +37,9 @@
 
 
 <h4>Assignment 2: Fusion 360 Tutorial</h4>
+I just worked through one of the tutorials provided by Nathan on the PS70 website 
+(link: https://www.autodesk.com/learn/ondemand/tutorial/introduction-to-fusion).
+The 3d file is available to download at the link, and here is an image of the thing I made from the tutorial.
 
 
 <h4>Assignment 3: Fusion Modeling</h4>
