--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -38,9 +38,10 @@
 
 <h4>Assignment 2: Fusion 360 Tutorial</h4>
 I just worked through one of the tutorials provided by Nathan on the PS70 website 
-(link: https://www.autodesk.com/learn/ondemand/tutorial/introduction-to-fusion).
-The 3d file is available to download at the link, and here is an image of the thing I made from the tutorial.
-
+(link: https://www.youtube.com/watch?v=vVFYrBClkPc).
+The 3d file is available to download at the corresponding link, and here is an image of the thing I made from the tutorial.
+I started with just messing around with the shapes made in the tutorial, extruded them, and then colored them in.
+<image style = "width: 75%"src = "02_2Ddesign/assignment 2 image.png" alt = "assignment 2 image"> </image>
 
 <h4>Assignment 3: Fusion Modeling</h4>
 
