--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -39,10 +39,10 @@
 <h4>Assignment 2: Fusion 360 Tutorial</h4>
 I just worked through one of the tutorials provided by Nathan on the PS70 website 
 (link: https://www.youtube.com/watch?v=vVFYrBClkPc).
-The 3d file is available to download at the corresponding link, and here is an image of the thing I made from the tutorial.
+The 3d file is available to download at the link below, and here is an image of the thing I made from the tutorial.
 I started with just messing around with the shapes made in the tutorial, extruded them, and then colored them in.
-<image style = "width: 75%"src = "02_2Ddesign/assignment 2 image.png" alt = "assignment 2 image"> </image>
-
+<image style = "width: 75%"src = "assignment 2 image.png" alt = "assignment 2 image"> </image>
+<a href="https://drive.google.com/file/d/1cx82JaoVD-9L0G8GhWrFjo4XzaMnXco9/view?usp=drive_link">link for 3D file</a>
 <h4>Assignment 3: Fusion Modeling</h4>
 
 
